@@ -23,17 +23,16 @@ import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import org.apache.commons.codec.binary.Base64;
 
 /** 
  * RSA算法，实现数据的加密解密。 
  */
-public class RSAUtil {
+public class RSA {
 	private static Cipher cipher;  
     
     static{  
-        try {  
+        try {
             cipher = Cipher.getInstance("RSA");  
         } catch (NoSuchAlgorithmException e) {  
             e.printStackTrace();  
@@ -43,11 +42,10 @@ public class RSAUtil {
     }
     
     /** 
-     * 生成密钥对 
-     * @param filePath 生成密钥的路径 
-     * @return 
+     * 生成密钥对
+     * @return
      */  
-    public static Map<String,String> generateKeyPair(String filePath){  
+    public static Map<String,String> generateKeyPair(){
         try {  
             KeyPairGenerator keyPairGen = KeyPairGenerator.getInstance("RSA");  
             // 密钥位数  
@@ -58,24 +56,11 @@ public class RSAUtil {
             PublicKey publicKey = keyPair.getPublic();  
             // 私钥  
             PrivateKey privateKey = keyPair.getPrivate();  
-            //得到公钥字符串  
+            // 得到公钥字符串
             String publicKeyString = getKeyString(publicKey);  
-            //得到私钥字符串  
+            // 得到私钥字符串
             String privateKeyString = getKeyString(privateKey);  
-            //将密钥对写入到文件  
-            FileWriter pubfw = new FileWriter(filePath + "/publicKey.keystore");  
-            FileWriter prifw = new FileWriter(filePath + "/privateKey.keystore");  
-            BufferedWriter pubbw = new BufferedWriter(pubfw);  
-            BufferedWriter pribw = new BufferedWriter(prifw);  
-            pubbw.write(publicKeyString);  
-            pribw.write(privateKeyString);  
-            pubbw.flush();  
-            pubbw.close();  
-            pubfw.close();  
-            pribw.flush();  
-            pribw.close();  
-            prifw.close();  
-            //将生成的密钥对返回  
+            // 将生成的密钥对返回
             Map<String,String> map = new HashMap<String,String>();  
             map.put("publicKey", publicKeyString);  
             map.put("privateKey", privateKeyString);  
@@ -95,7 +80,7 @@ public class RSAUtil {
      */  
     public static PublicKey getPublicKey(String key) throws Exception {  
         byte[] keyBytes;  
-        keyBytes = (new BASE64Decoder()).decodeBuffer(key);  
+        keyBytes = Base64.decodeBase64(key); 
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);  
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");  
         PublicKey publicKey = keyFactory.generatePublic(keySpec);  
@@ -111,7 +96,7 @@ public class RSAUtil {
      */  
     public static PrivateKey getPrivateKey(String key) throws Exception {  
         byte[] keyBytes;  
-        keyBytes = (new BASE64Decoder()).decodeBuffer(key);  
+        keyBytes = Base64.decodeBase64(key);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);  
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");  
         PrivateKey privateKey = keyFactory.generatePrivate(keySpec);  
@@ -125,7 +110,7 @@ public class RSAUtil {
      */  
     public static String getKeyString(Key key) throws Exception {  
         byte[] keyBytes = key.getEncoded();  
-        String s = (new BASE64Encoder()).encode(keyBytes);  
+        String s = Base64.encodeBase64URLSafeString(keyBytes);  
         return s;  
     }
     
@@ -139,7 +124,7 @@ public class RSAUtil {
         try {             
             cipher.init(Cipher.ENCRYPT_MODE, publicKey);  
             byte[] enBytes = cipher.doFinal(plainText.getBytes());            
-            return (new BASE64Encoder()).encode(enBytes);  
+            return Base64.encodeBase64URLSafeString(enBytes);  
         } catch (InvalidKeyException e) {  
             e.printStackTrace();  
         } catch (IllegalBlockSizeException e) {  
@@ -169,7 +154,7 @@ public class RSAUtil {
             fr.close();  
             cipher.init(Cipher.ENCRYPT_MODE,getPublicKey(publicKeyString));  
             byte[] enBytes = cipher.doFinal(plainText.getBytes());            
-            return (new BASE64Encoder()).encode(enBytes);  
+            return Base64.encodeBase64URLSafeString(enBytes);  
         } catch (InvalidKeyException e) {  
             e.printStackTrace();  
         } catch (IllegalBlockSizeException e) {  
@@ -192,8 +177,8 @@ public class RSAUtil {
         try {              
             cipher.init(Cipher.ENCRYPT_MODE,getPublicKey(publicKey));  
             byte[] enBytes = cipher.doFinal(plainText.getBytes());            
-            return (new BASE64Encoder()).encode(enBytes);  
-        } catch (InvalidKeyException e) {  
+            return Base64.encodeBase64URLSafeString(enBytes);
+        } catch (InvalidKeyException e) {
             e.printStackTrace();  
         } catch (IllegalBlockSizeException e) {  
             e.printStackTrace();  
@@ -214,15 +199,13 @@ public class RSAUtil {
     public static String decrypt(PrivateKey privateKey, String enStr){  
         try {  
             cipher.init(Cipher.DECRYPT_MODE, privateKey);  
-            byte[] deBytes = cipher.doFinal((new BASE64Decoder()).decodeBuffer(enStr));  
+            byte[] deBytes = cipher.doFinal(Base64.decodeBase64(enStr));  
             return new String(deBytes);  
         } catch (InvalidKeyException e) {  
             e.printStackTrace();  
         } catch (IllegalBlockSizeException e) {  
             e.printStackTrace();  
         } catch (BadPaddingException e) {  
-            e.printStackTrace();  
-        } catch (IOException e) {  
             e.printStackTrace();  
         }  
         return null;  
@@ -237,7 +220,7 @@ public class RSAUtil {
     public static String decrypt(String privateKey, String enStr){  
         try {           
             cipher.init(Cipher.DECRYPT_MODE, getPrivateKey(privateKey));  
-            byte[] deBytes = cipher.doFinal((new BASE64Decoder()).decodeBuffer(enStr));  
+            byte[] deBytes = cipher.doFinal(Base64.decodeBase64(enStr));  
             return new String(deBytes);  
         } catch (InvalidKeyException e) {  
             e.printStackTrace();  
@@ -271,7 +254,7 @@ public class RSAUtil {
             br.close();  
             fr.close();           
             cipher.init(Cipher.DECRYPT_MODE, getPrivateKey(privateKeyString));  
-            byte[] deBytes = cipher.doFinal((new BASE64Decoder()).decodeBuffer(enStr));  
+            byte[] deBytes = cipher.doFinal(Base64.decodeBase64(enStr));  
             return new String(deBytes);  
         } catch (InvalidKeyException e) {  
             e.printStackTrace();  
@@ -288,21 +271,16 @@ public class RSAUtil {
     }
     
     public static void main(String[] args) {
-//    	generateKeyPair("D:/RSA");
-    	
-    	String publicKey; 
-    	String privateKey;
+        Map<String, String> keyMap = generateKeyPair();
 
-    	publicKey = "MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAviSuCu4Yg/WAyjp06qiaE/ioI2M/ACT9UTUVxWtM7IZlXMQZPjLn0H1x0zmJ/VLIhnBliyb06QLvtrrBFRt4jnOJR5LjoTg/g8XYdVXN6a+XFjqFvOUPgzZ7OdywOoXxiO+M7WrvT0XgqyBqCnDADpY1eucDqfIDYYOBHKbtMkh0N4ZVBcfULb1Sm+Q7ed+jUa8eXPQPhMrWvhQkIeZJh+hCIrNjXUxyfZPh1tSvqoJYArbyHZs8LnbUtjIQCx9OlR9+xJTx3L9h89I4D+hqA4CZqxUzfibsu5XgYKnoSri2OCR2FefSfYlCd8Fysp0wET/r1L141qnhoMQtrUs8jwIDAQAB";
-    	privateKey = "MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQC+JK4K7hiD9YDKOnTqqJoT+KgjYz8AJP1RNRXFa0zshmVcxBk+MufQfXHTOYn9UsiGcGWLJvTpAu+2usEVG3iOc4lHkuOhOD+Dxdh1Vc3pr5cWOoW85Q+DNns53LA6hfGI74ztau9PReCrIGoKcMAOljV65wOp8gNhg4Ecpu0ySHQ3hlUFx9QtvVKb5Dt536NRrx5c9A+Eyta+FCQh5kmH6EIis2NdTHJ9k+HW1K+qglgCtvIdmzwudtS2MhALH06VH37ElPHcv2Hz0jgP6GoDgJmrFTN+Juy7leBgqehKuLY4JHYV59J9iUJ3wXKynTARP+vUvXjWqeGgxC2tSzyPAgMBAAECggEAMhFkhtpFOFIoFJgp+zRkRgf+9jqG91nGHmEVF4P2oH2PKUs1vmwXII43r8AB9uOai9QC2Q5sBQNR7dLlTtKJ/zCrIF6sc+JkzyUEp3jtnLAw35iPaLsER6/L6OOUwARPIpi5ijbTRxOGYmlJovAnkm+5K2CzVUe13jKLh+joool/ReZk0Rsr4tVLSLmvzDA/sRwYun0x0+jl5EZSQfwsVyN9bD5rY/In/EuvH9yj5R4lPe+mimF4Os6IgTsP5LzqDTAiFx5NNioFRJ2SkcTmM0CZQeMIBuvvF2HCtJlDEfCytD7wYup3GBvar2ccOe9T3YhJdsj5bfAJHVJtamxQwQKBgQDnYReMMzqAh2HOFL8QymzOjImsrOz6NCZatq38TU1hSe9PK+C0sFGhkd788y4AuURS1Btu4i7F+hOYcj1z3L+NSPGE3yLHVjakMrrNbA9rwG/t7oU0cG7d0WWM9bcTQiCSNcUyt69BGH3dZdqee1tITzqghE7+gh9RYiVcI6/8LwKBgQDSYEuWFLMUsR/s7unSHCucuEXjwbYrvknv8Y81sjvrWktNXrJoYlbGy/7HYA6lxzchtSxhPuUSjopwQ5scgMhqf8Gxz7jsDN9ak2dErF7cWRFYfh6aKhkbEw9oG01jIX15MK0TbMafoJslDhPQF1cP9i0+ZGg+gPbASdeUVRTNoQKBgQCOjwDOLgYeiMtXCOtL8hymCmsNDCKaaiUzgRijuhEyHzamJhe13Gj/TnwAh+hRI9UX333jjNJawqDuLXz1dQ5Eg6vjPQQVo2XZNzRnOuwpbJDKHUrPK3Lzkn+qIP6ii/y7eQu+GvSM/AUYsxfGy6RLYh1yJvLw1sVrBDiWk5prmwKBgFvgrmI3XBa3XKgPl5KptupVGEDmAveLvaLLLq5WzxB0eNqrduNbv2ZHBVhxvTPtk0hnZaB65XR7SD7LZ9zE6cKJVUCg5bRB0vIt2jYFydAWHhs1yYuuwxQt+NaQxfV7VN8uwQfww7ZHYDqIsWJ6Lw3Lh+rt0xEpJZrJJRulJNbBAoGBAK1OEnfBpSB99N8gdhp+ZGLsDfwFCQ2Cd4Jpsd4hxdwbXevNuA1OiE20sHPuKqEqfOKocgTMobCwbSfnymatRydVoeUumkEc4Ja+XDgH+P1eXQLdIuRCwh0AXl+vkuOCBDMw367Zp/j6vwPlNKh9ZmOBPwhV0Syv2Z8uGkTZ6g+f";
-    	
-    	
+    	String publicKey = keyMap.get("publicKey");
+    	String privateKey = keyMap.get("privateKey");
     	System.err.println("公钥加密——私钥解密");
         String source = "高可用架构对于互联网服务基本是标配。";
         System.out.println("\r加密前文字：\r\n" + source);
-        String aData = RSAUtil.encrypt(publicKey, source);
+        String aData = RSA.encrypt(publicKey, source);
         System.out.println("加密后文字：\r\n" + aData);
-        String dData = RSAUtil.decrypt(privateKey, aData);
-        System.out.println("解密后文字: \r\n" + dData);  	
-	}
+        String dData = RSA.decrypt(privateKey, aData);
+        System.out.println("解密后文字: \r\n" + dData);
+    }
 }
